<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/dialog_linear"
    android:layout_width="330dp"
    android:layout_marginHorizontal="10dp"
    android:layout_height="235dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/compress_img"/>

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/metropolis_bold"
                    android:textColor="@color/blue"
                    android:text="@string/image_compression"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/metropolis_semibold"
                    android:textColor="@color/black"
                    android:text="@string/change_image_compression_of_image"/>

                <EditText
                    android:id="@+id/quality"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="10dp"
                    android:paddingStart="10dp"
                    android:fontFamily="@font/metropolis_medium"
                    android:hint="@string/enter_compression_of_image"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:inputType="text"
                    android:background="@drawable/create_pdf_dialog_border" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbSetDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/metropolis_regular"
                android:text="@string/set_as_default" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/canceldialog"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:text="@string/cancel"
                    android:background="@drawable/create_pdf_dialog_border"
                    android:fontFamily="@font/metropolis_medium"
                    android:textColor="#80000000"
                    android:backgroundTint="#E7EAEE"
                    android:textAllCaps="false"
                    android:textSize="13dp"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <Button
                    android:id="@+id/okdialog"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:text="@string/ok"
                    android:background="@drawable/create_pdf_dialog_border"
                    android:fontFamily="@font/metropolis_medium"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/dark_blue"
                    android:textAllCaps="false"
                    android:textSize="13sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>