<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <TextView
        android:id="@+id/pageNumber"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/circle_white"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/selected_image"
        android:scaleType="centerCrop"
        android:src="@drawable/img" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="10dp">

        <ImageButton
            android:id="@+id/removeImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_white"
            android:contentDescription="@string/delete"
            android:padding="4dp"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_close_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_white"
            android:contentDescription="@string/arrow_up"
            app:srcCompat="@drawable/ic_arrow_up_black_24dp" />

        <ImageButton
            android:id="@+id/buttonDown"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_white"
            android:contentDescription="@string/arrow_down"
            app:srcCompat="@drawable/ic_arrow_down_black_24dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="#1A000000" />

</RelativeLayout>
